# iiq2img

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FINDINGS.md  README.md  fast_demosaic_research.py  main.py  pyproject.toml  usage.ipynb
.github/workflows/: ci.yml  publish.yml
docs/: RELEASING.md
iiq2img/: __init__.py  converter.py  encode.py  georef.py  metadata.py  pipeline.py  repair.py
tests/: conftest.py  test_batch.py  test_cli.py  test_convert.py  test_enums.py  test_georef.py  test_image.py  test_main.py  test_metadata.py  test_pipeline_internals.py  test_pipeline_parity.py  test_read.py  test_repair.py
