[project]
name = "iiq2img"
dynamic = ["version"]
description = "Fast IIQ converter for Phase One iXM-GS120 (120MP) raw images"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Nick Wright" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "numba>=0.60.0",
    "opencv-python-headless>=4.8",
    "pillow>=10.0",
    "rawpy>=0.19",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
geo = ["rasterio>=1.3"]

[project.scripts]
iiq2img = "iiq2img.converter:_cli_main"

[project.urls]
Homepage = "https://github.com/DPIRD-DMA/iiq2img"
Repository = "https://github.com/DPIRD-DMA/iiq2img"
Changelog = "https://github.com/DPIRD-DMA/iiq2img/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["iiq2img*"]

[tool.setuptools_scm]

[tool.mypy]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mypy>=1.19",
    "pre-commit>=4.0",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
